Fix control-icon z-index

--- a/src/components/ControlIcon/ControlIcon.scss
+++ b/src/components/ControlIcon/ControlIcon.scss
@@ -8,7 +8,7 @@
       opacity: 1;
     }
   }
-  
+
   &:hover {
     &::before {
       opacity: 1;
@@ -18,7 +18,7 @@
 }
 
 .control-icon__icon {
-  z-index: 2000;
+  z-index: 2;
 }
 .control__icon--disabled {
   opacity: 0.7;
@@ -43,7 +43,7 @@
     transform: scale3d(0.3, 0.3, 1);
     opacity: 0;
     transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    z-index: 1999;
+    z-index: 1;
   }
 }
 
